--- a/WebApplication1/Views/Organizer/Create.cshtml
+++ b/WebApplication1/Views/Organizer/Create.cshtml
@@ -18,8 +18,8 @@
 
                 <div class="form-group">
                     <label asp-for="Name" class="control-label"></label>
-                    <div><span asp-validation-for="Name" class="text-danger"></span></div>
                     <input asp-for="Name" class="form-control" />
+                    <span asp-validation-for="Name" class="text-danger"></span>
                 </div>
                 <div class="form-group">
                     <label asp-for="Mail" class="control-label"></label>
@@ -28,23 +28,23 @@
                 </div>
                 <div class="form-group">
                     <label asp-for="StartDate" class="control-label"></label>
-                    <div><span asp-validation-for="StartDate" class="text-danger"></span></div>
                     <input type="date" asp-for="StartDate" class="form-control" />
+                    <span asp-validation-for="StartDate" class="text-danger"></span>
                 </div>
                 <div class="form-group">
                     <label asp-for="EndDate" class="control-label"></label>
-                    <div><span asp-validation-for="EndDate" class="text-danger"></span></div>
                     <input type="date" asp-for="EndDate" class="form-control" />
+                    <span asp-validation-for="EndDate" class="text-danger"></span>
                 </div>
                 <div class="form-group">
                     <label asp-for="MaxCountTeams" class="control-label"></label>
-                    <div><span asp-validation-for="MaxCountTeams" class="text-danger"></span></div>
                     <input asp-for="MaxCountTeams" class="form-control" />
+                    <span asp-validation-for="MaxCountTeams" class="text-danger"></span>
                 </div>
                 <div class="form-group">
                     <label asp-for="Password" class="control-label"></label>
-                    <div><span asp-validation-for="Password" class="text-danger"></span></div>
                     <input type="password" asp-for="Password" class="form-control" />
+                    <span asp-validation-for="Password" class="text-danger"></span>
                 </div>
 
                 <div class="form-group">
