--- a/WebApplication1/Views/Team/Create.cshtml
+++ b/WebApplication1/Views/Team/Create.cshtml
@@ -18,18 +18,18 @@
 
                 <div class="form-group">
                     <label asp-for="Name" class="control-label"></label>
-                    <div><span asp-validation-for="Name" class="text-danger"></span></div>
                     <input asp-for="Name" class="form-control" />
+                    <span asp-validation-for="Name" class="text-danger"></span>
                 </div>
                 <div class="form-group">
                     <label asp-for="Mail" class="control-label"></label>
-                    <div><span asp-validation-for="Name" class="text-danger"></span></div>
                     <input type="email" asp-for="Mail" class="form-control" />
+                    <span asp-validation-for="Name" class="text-danger"></span>
                 </div>
                 <div class="form-group">
                     <label asp-for="Password" class="control-label"></label>
-                    <div><span asp-validation-for="Password" class="text-danger"></span></div>
                     <input type="password" asp-for="Password" class="form-control" />
+                    <span asp-validation-for="Password" class="text-danger"></span>
                 </div>
 
                 <div class="form-group">
