--- a/WebApplication1/wwwroot/css/styles.css
+++ b/WebApplication1/wwwroot/css/styles.css
@@ -1,5 +1,4 @@
-﻿@import url('styles.css');
-body {
+﻿body {
     margin: 0;
     padding: 0;
 }
@@ -26,7 +25,6 @@ nav {
     margin-right: 2em;
 }
 nav ul {
-    min-width: 120px;
     position: absolute;
     height: 100%;
     list-style-type: none;
@@ -120,14 +118,3 @@ a.glyphicon {
     .middleWindow div {
         width: 100px;
     }
-
-.middleBlock {
-    width: 50%;
-    margin: 0, auto;
-}
-
-.detailTabel tr td {
-    text-align: left;
-    padding: .2em;
-    padding-left: 2em;
-}
