--- a/WebApplication1/Views/Account/Login.cshtml
+++ b/WebApplication1/Views/Account/Login.cshtml
@@ -11,7 +11,7 @@
     <div class="validation" asp-validation-summary="ModelOnly" />
     <div class="container">
         <div class="form-group">
-            <label asp-for="UserType">Введите UserType</label>
+            <label asp-for="UserType">Enter UserType</label>
             <select asp-for="UserType">
                 <option value=@UserType.Team>Team</option>
                 <option value=@UserType.Organizer>Organizer</option>
@@ -19,12 +19,12 @@
             <span asp-validation-for="UserType"/>
         </div>
         <div class="form-group">
-            <label asp-for="Name">Введите Email</label>
+            <label asp-for="Name">Enter Email</label>
             <input type="text" asp-for="Name"/>
             <span asp-validation-for="Name"/>
         </div>
         <div class="form-group">
-            <label asp-for="Password">Введите пароль</label>
+            <label asp-for="Password">Enter Password</label>
             <input asp-for="Password"/>
             <span asp-validation-for="Password"/>
         </div>
