--- a/WebApplication1/Views/Shared/_Layout.cshtml
+++ b/WebApplication1/Views/Shared/_Layout.cshtml
@@ -11,6 +11,13 @@
 <body>
     <header>
         SOCCER MANAGER
+        @if (!User.Identity.IsAuthenticated)
+        {
+            <div style="float: right; margin-left: 1em;"><a class="btn btn-default" asp-action="Login" asp-controller="Account">Login</a></div>
+            <div style="float: right; margin-left: 1em;"><a class="btn btn-default" asp-action="RegisterTeam" asp-controller="Account">Create Team</a></div>
+            <div style="float: right; margin-left: 1em;"><a class="btn btn-default" asp-action="RegisterCup" asp-controller="Account">Create Cup</a></div>
+
+        }
     </header>
     <nav>
         @await Component.InvokeAsync("NavigationMenu")
