--- a/WebApplication1/Views/Team/Edit.cshtml
+++ b/WebApplication1/Views/Team/Edit.cshtml
@@ -17,13 +17,13 @@
 
             <div class="form-group">
                 <label asp-for="Name" class="control-label"></label>
+                <div><span asp-validation-for="Name" class="text-danger"></span></div>
                 <input asp-for="Name" class="form-control" value="@Model.Name" />
-                <span asp-validation-for="Name" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Mail" class="control-label"></label>
+                <div><span asp-validation-for="Mail" class="text-danger"></span></div>
                 <input type="email" asp-for="Mail" class="form-control" value="@Model.Mail" />
-                <span asp-validation-for="Mail" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-default" />
@@ -32,5 +32,3 @@
         </form>
     </div>
 </div>
-
-
