--- a/WebApplication1/Views/Team/Index.cshtml
+++ b/WebApplication1/Views/Team/Index.cshtml
@@ -11,7 +11,7 @@
     <div class="middleWindow round-border">
         <h1 class="text-center">Are you sure!</h1>
         <div style="width: 100%;  text-align: center;">
-            <a asp-action="Delete" asp-route-TeamId="@Model.Team.TeamId" asp-route-Password="@Model.Team.Password"
+            <a asp-action="Delete"
                class="btn btn-success glyphicon glyphicon-ok-circle" style="background-color: steelblue"></a>
 
             <a asp-action="Index" asp-controller="Team"
@@ -20,16 +20,21 @@
     </div>
 }
 
-<div class="container">
+<div>
 
     @if (@Model.Team != null)
     {
 
         <div style="text-align: right; padding: 2em; background-color: white;">
-            <a asp-action="LogOut" asp-controller="Team">Log Out</a>
+            <a class="btn btn-default" asp-action="Logout" asp-controller="Account">Log Out</a>
         </div>
 
-        <div class="infoBlock" style="width: 100%;">
+        @if (TempData["message"] != null)
+        {
+            <div style="margin-left: 30px;" class="alert alert-success">@TempData["message"]</div>
+        }
+
+        <div class="infoBlock" style="width: 97%;">
             <header>
                 <h2 style="display: inline;">Your team: @Model.Team.Name</h2>
 
@@ -39,19 +44,34 @@
                     <a asp-action="Confirm" asp-controller="Team"
                        style="background-color: steelblue;" class="btn btn-success glyphicon glyphicon-trash"></a>
                 </div>
+                <h3>Mail: @Model?.Team.Mail</h3>
             </header>
 
-            <ul style="list-style: none; font-size: 2em;">
-                <li>Mail: @Model?.Team.Mail</li>
-            </ul>
+            <table class="detailTabel">
+                <tr>
+                    <th></th>
+                    <th></th>
+                </tr>
+                @foreach (var cup in Model.Cups)
+                {
+                    <tr>
+                        <td><a asp-action="Cup" asp-controller="Home" asp-route-id="@cup.TournamentId">@cup.Name</a></td>
+                        <td>@cup.Mail</td>
+                        <td><a asp-action="RegistrToCup" asp-route-CupId="@cup.TournamentId" asp-route-Password="@Model.Team.Password" class="btn btn-default">Register</a></td>
+                    </tr>
+                }
+            </table>
         </div>
 
-        <div class="infoBlock" style="width: 40%; display: inline-block;">
+        <div class="infoBlock" style="width: 45%; display: inline-block;">
 
             <header>
                 Players
-                <a asp-action="AddPlayer" asp-controller="Team"
-                   class="btn btn-success glyphicon" style="background-color: steelblue">Add Player</a>
+
+                <div style="float:right; margin-right:30px;">
+                    <a asp-action="AddPlayer" asp-controller="Team"
+                       class="btn btn-success glyphicon" style="background-color: steelblue">Add Player</a>
+                </div>
             </header>
 
             <table class="table table-striped" style="margin-bottom: 0px; width: 95%; margin-left: 2.5%;">
@@ -61,7 +81,7 @@
                         <td>Name</td>
                         <td>Surname</td>
                         <td>Position</td>
-                        <td>Age</td>
+                        <td>Edit</td>
                         <td>Remove</td>
                     </tr>
                 </thead>
@@ -82,11 +102,12 @@
                             @item.Position
                         </td>
                         <td>
-                            @item.Age
+                            <a asp-action="EditPlayer" asp-controller="Team" asp-route-playerId="@item.PlayerId"
+                               style="position: inherit;" class="btn btn-default glyphicon glyphicon-wrench"></a>
                         </td>
                         <td>
                             <a asp-action="RemovePlayer" asp-controller="Team" asp-route-PlayerId="@item.PlayerId" asp-route-Password="@Model.Team.Password"
-                               class="btn btn-success glyphicon glyphicon-remove" style="background-color: steelblue"></a>
+                               class="btn btn-default glyphicon glyphicon-remove"></a>
                         </td>
                     </tr>
                     i++;
@@ -94,12 +115,12 @@
             </table>
         </div>
 
-        <div class="infoBlock" style="width: 50%; float: right; margin-right: -1.5%;">
+        <div class="infoBlock" style="width: 45%; float: right;">
 
             <header>
                 Current tournament(s)
             </header>
-            
+
             <table class="table table-striped" style="margin-bottom: 0px; width: 95%; margin-left: 2.5%;">
                 <thead style="font: bold 1.2em arial, verdana">
                     <tr>
@@ -109,7 +130,7 @@
                         <td>Remove</td>
                     </tr>
                 </thead>
-                @*@{i = 1;}
+                @{i = 1;}
                 @foreach (Tournament item in Model?.Team.TeamTournaments.Select(sc => sc.Tournament).ToList())
                 {
                     <tr>
@@ -117,33 +138,25 @@
                             @i
                         </td>
                         <td>
-                            /<a asp-action="Index" asp-controller="Team" asp-route-id="@item.TournamentId">@item.Name</a>
+                            <a asp-action="Cup" asp-controller="Home">@item.Name</a>
                         </td>
                         <td>
                             @item.Mail
                         </td>
                         <td>
-                            <a asp-action="Remove" asp-controller="Team" asp-route-TeamId="@item.TournamentId" asp-route-Password="@Model.Tournament.Password"
-                               class="btn btn-success glyphicon glyphicon-remove" style="background-color: steelblue"></a>
+                            <a asp-action="RemoveCup" asp-controller="Team" asp-route-Password="@Model.Team.Password"
+                               class="btn btn-default glyphicon glyphicon-remove"></a>
                         </td>
                     </tr>
                     i++;
-                 }*@
+                }
             </table>
         </div>
     }
     else
     {
-        <div class="infoBlock" style="width: 30%; margin-left: 35%;">
-            <header>At first you must: </header>
-
-            <div style="text-align:center">
-                <br />
-                <a class="btn btn-success" asp-action="Login" asp-controller="Team">Log In</a>
-                <br /><span>Or</span><br />
-                <a class="btn btn-success" asp-action="Create" asp-controller="Team">Create Team</a>
-                <br />
-            </div>
+        <div class="infoBlock" style="margin: 3em auto;">
+            <h1>At first you should login </h1>
         </div>
 
     }
