--- a/WebApplication1/Views/Shared/_Layout.cshtml
+++ b/WebApplication1/Views/Shared/_Layout.cshtml
@@ -3,8 +3,9 @@
     <meta name="viewport" content="width=device-width" />
     <link rel="stylesheet" asp-href-include="/lib/bootstrap/dist/**/*.min.css" />
     <link rel="stylesheet" asp-href-include="/css/styles.css" />
+    <script src="~/js/site.js"></script>
     <link rel="icon" type="image/x-icon" href="favicon.ico">
-
+    <link href="@Url.Content("~/css/loginStyles.css")" rel="stylesheet" type="text/css" />
     <title>SoccerManager</title>
 
 </head>
