--- a/WebApplication1/Views/Home/Index.cshtml
+++ b/WebApplication1/Views/Home/Index.cshtml
@@ -5,10 +5,14 @@
 }
 
 
-<div class="container">
+<div class="wrapper">
 
-    <div class="infoBlock" style="width: 95%;">
-        <header>Current tournaments</header>
+    <div class="tab">
+        <button class="tablinks" onclick="openCity(event, 'cups')" id="defaultOpen">Tournaments</button>
+        <button class="tablinks" onclick="openCity(event, 'players')">Players</button>
+    </div>
+
+    <div id="cups" class="tabcontent">
         <table>
             <tr>
                 <th>Cup</th>
@@ -18,33 +22,42 @@
             </tr>
             @foreach (Tournament cup in Model.Tournaments)
             {
-            <tr>
-                <td><a asp-controller="Home" asp-action="Cup" asp-route-id="@cup.TournamentId">@cup.Name</a></td>
-                <td>@cup.StartDate</td>
-                <td>@cup.EndDate</td>
-                <td>@cup.MaxCountTeams</td>
-            </tr>
+                <tr>
+                    <td><a asp-controller="Home" asp-action="Cup" asp-route-id="@cup.TournamentId">@cup.Name</a></td>
+                    <td>@cup.StartDate</td>
+                    <td>@cup.EndDate</td>
+                    <td>@cup.MaxCountTeams</td>
+                </tr>
             }
         </table>
     </div>
 
 
 
-    <div class="infoBlock">
-        <header> Best Player </header>
+    <div id="players" class="tabcontent">
         <table>
             <tr>
                 <th>Player</th>
                 <th>Team</th>
+                <th>Position</th>
+                <th>Age</th>
             </tr>
             @foreach (Player player in Model.Players)
             {
                 <tr>
                     <td>@player.Name @player.Surname</td>
                     <td>@player.Team.Name</td>
+                    <td>@player.Position</td>
+                    <td>@player.Age</td>
                 </tr>
             }
         </table>
     </div>
 
 </div>
+
+
+<script>
+    // Get the element with id="defaultOpen" and click on it
+    document.getElementById("defaultOpen").click();
+</script>
