--- a/WebApplication1/wwwroot/css/styles.css
+++ b/WebApplication1/wwwroot/css/styles.css
@@ -12,6 +12,10 @@ header {
     text-align: right;
 }
 
+.wrapper {
+    padding: 2em;
+}
+
 .infoBlock header {
     background-color: darkcyan;
     width: 100%;
@@ -57,8 +61,7 @@ nav ul {
 }
 
 table {
-    width: 98%;
-    margin: .5em .2em .5em .2em;
+    width: 100%;
 }
 
 th, td {
@@ -119,3 +122,58 @@ a.glyphicon {
     .middleWindow div {
         width: 100px;
     }
+
+/* Style the tab */
+.tab {
+    overflow: hidden;
+    border: 1px solid #ccc;
+    background-color: #f1f1f1;
+
+}
+    .tabcontent header {
+        background-color: #f1f1f1;
+        color: black;
+    }
+
+    /* Style the buttons that are used to open the tab content */
+    .tab button {
+        background-color: inherit;
+        float: left;
+        border: none;
+        outline: none;
+        cursor: pointer;
+        padding: 14px 16px;
+        transition: 0.3s;
+    }
+
+        /* Change background color of buttons on hover */
+        .tab button:hover {
+            background-color: #ddd;
+        }
+
+        /* Create an active/current tablink class */
+        .tab button.active {
+            background-color: #ccc;
+        }
+
+/* Style the tab content */
+.tabcontent {
+    display: none;
+    border: 1px solid #ccc;
+    border-top: none;
+}
+
+.tabcontent {
+    animation: fadeEffect 1s; /* Fading effect takes 1 second */
+}
+
+/* Go from zero to full opacity */
+@keyframes fadeEffect {
+    from {
+        opacity: 0;
+    }
+
+    to {
+        opacity: 1;
+    }
+}
