--- a/WebApplication1/Views/Account/Login.cshtml
+++ b/WebApplication1/Views/Account/Login.cshtml
@@ -5,10 +5,10 @@
 
 
 <div class="wrapper">
-    <div class="partialBlock" style="text-align: center;">
+    <div class="partialBlock" style="text-align: center; float: left;">
         <img src="~/images/img-01.png" />
     </div>
-
+    
     <div class="partialBlock" style="text-align: center;">
 
         <span class="head">
@@ -34,6 +34,15 @@
                 </div>
                 <div class="form-group">
                     <input type="submit" class="btn btn-default" value="Login" />
+                </div>
+                <div class="text-center">
+                    Or
+                </div>
+                <div class="form-group" style="width:45%; display:inline-block">
+                    <a asp-controller="Account" asp-action="RegisterTeam" class="btn btn-default">Create Team</a>
+                </div>
+                <div class="form-group" style="width:45%; display:inline-block">
+                    <a asp-controller="Account" asp-action="RegisterCup" class="btn btn-default">Create Tournament</a>
                 </div>
             </form>
         </div>
