--- a/WebApplication1/Views/Account/RegisterCup.cshtml
+++ b/WebApplication1/Views/Account/RegisterCup.cshtml
@@ -57,7 +57,7 @@
     </div>
 
     <div>
-        <a asp-action="Index">Back to List</a>
+        <a asp-action="Login">Back to List</a>
     </div>
 
 </div>
