--- a/WebApplication1/Views/Account/RegisterTeam.cshtml
+++ b/WebApplication1/Views/Account/RegisterTeam.cshtml
@@ -39,7 +39,7 @@
 
                 <div class="form-group">
                     <input type="submit" value="Create" class="btn btn-default" />
-                    <a class="btn btn-default" asp-action="Index">Cancel</a>
+                    <a class="btn btn-default" asp-action="Login">Cancel</a>
                 </div>
             </form>
 
