--- a/WebApplication1/wwwroot/css/loginStyles.css
+++ b/WebApplication1/wwwroot/css/loginStyles.css
@@ -26,7 +26,7 @@
         border-radius: 2em;
     }
 
-    .login-form input[type=submit] {
+    .login-form input[type=submit], .login-form a {
         width: 80%;
         padding: 12px 20px;
         margin: 8px 0;
@@ -36,7 +36,7 @@
         background-color: #60d44a;
         color: white;
     }
-        .login-form input[type=submit]:hover {
+        .login-form input[type=submit]:hover, .login-form a:hover {
             background-color: whitesmoke;
             color: black;
         }
