--- a/WebApplication1/Views/Home/Index.cshtml
+++ b/WebApplication1/Views/Home/Index.cshtml
@@ -10,6 +10,7 @@
     <div class="tab">
         <button class="tablinks" onclick="openCity(event, 'cups')" id="defaultOpen">Tournaments</button>
         <button class="tablinks" onclick="openCity(event, 'players')">Players</button>
+        <button class="tablinks" onclick="openCity(event, 'teams')">Teams</button>
     </div>
 
     <div id="cups" class="tabcontent">
@@ -34,7 +35,27 @@
 
 
 
+    <div id="teams" class="tabcontent">
+        <div id="midAge" style="text-align: right; float: right; padding: .5em;"><span>Middle age of all player: </span> @Model.CalculateMiddleAge()</div>
+
+        <table>
+            <tr>
+                <th>Name</th>
+                <th>Middle Age</th>
+            </tr>
+            @foreach (Team team in Model.Teams)
+            {
+                <tr>
+                    <td>@team.Name</td>
+                    <td>@Model.CalculateMiddleAgeTeam(team.Players)</td>
+                </tr>
+            }
+        </table>
+    </div>
+
     <div id="players" class="tabcontent">
+        <div id="midAge" style="text-align: right; float: right; padding: .5em;"><span>Middle age of all player: </span> @Model.CalculateMiddleAge()</div>
+
         <table>
             <tr>
                 <th>Player</th>
