--- a/WebApplication1/wwwroot/css/styles.css
+++ b/WebApplication1/wwwroot/css/styles.css
@@ -9,7 +9,7 @@ header {
     padding: .5em;
     color: white;
     border-bottom: 2px solid #333;
-    text-align: left;
+    text-align: right;
 }
 
 .wrapper {
