--- a/WebApplication1/Views/Home/Index.cshtml
+++ b/WebApplication1/Views/Home/Index.cshtml
@@ -8,8 +8,8 @@
 <div class="wrapper">
 
     <div class="tab">
-        <button class="tablinks" onclick="openCity(event, 'cups')" id="defaultOpen">Tournaments</button>
-        <button class="tablinks" onclick="openCity(event, 'teams')">Teams</button>
+        <button class="tablinks" onclick="openCity(event, 'cups')">Tournaments</button>
+        <button class="tablinks" onclick="openCity(event, 'teams')" id="defaultOpen">Teams</button>
         <button class="tablinks" onclick="openCity(event, 'players')">Players</button>
     </div>
 
