--- a/WebApplication1/Views/Team/Index.cshtml
+++ b/WebApplication1/Views/Team/Index.cshtml
@@ -139,7 +139,7 @@
                             @i
                         </td>
                         <td>
-                            <a asp-action="Cup" asp-controller="Home">@item.Name</a>
+                            <a asp-action="Cup" asp-controller="Home" asp-route-id="@item.TournamentId">@item.Name</a>
                         </td>
                         <td>
                             @item.Mail
