--- a/WebApplication1/Views/Team/ListReward.cshtml
+++ b/WebApplication1/Views/Team/ListReward.cshtml
@@ -16,7 +16,7 @@
 <div class="infoBlock" style="width: 45%; display: inline-block;">
     
     <header>
-        Rewards of @Model.FirstOrDefault().Team.Name
+        Rewards
 
         <div style="float:right; margin-right:30px;">
             <a asp-action="AddReward" asp-controller="Team"
