--- a/WebApplication1/Views/Organizer/Edit.cshtml
+++ b/WebApplication1/Views/Organizer/Edit.cshtml
@@ -27,7 +27,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="EndDate" class="control-label"></label>
-                <input type="date" asp-for="EndDate" class="form-control"  value="@Model.EndDate" />
+                <input type="text" asp-for="EndDate" class="form-control"  value="@Model.EndDate" />
                 <span asp-validation-for="EndDate" class="text-danger"></span>
             </div>
             <div class="form-group">
