improve creation of player

--- a/WebApplication1/Views/Team/AddPlayer.cshtml
+++ b/WebApplication1/Views/Team/AddPlayer.cshtml
@@ -32,9 +32,9 @@
                     <input asp-for="Position" class="form-control" />
                 </div>
                 <div class="form-group">
-                    <label asp-for="Age" class="control-label"></label>
-                    <div><span asp-validation-for="Age" class="text-danger"></span></div>
-                    <input asp-for="Age" class="form-control" />
+                    <label asp-for="Born" class="control-label"></label>
+                    <div><span asp-validation-for="Born" class="text-danger"></span></div>
+                    <input type="date" asp-for="Born" class="form-control" />
                 </div>
 
                 <div class="form-group">
